<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_bg"
    app:cardCornerRadius="8dp"
    app:cardElevation="24dp"
    app:cardMaxElevation="36dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agloc_solid"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtVwAglocSolidAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="no"
            android:background="@drawable/bg_stroke_circle_edge_gray"
            android:hint="@string/amount"
            android:inputType="number"
            android:paddingStart="25dp"
            android:paddingEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/agloc_non_solid"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtVwAglocNonSolidAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="no"
            android:background="@drawable/bg_stroke_circle_edge_gray"
            android:hint="@string/amount"
            android:inputType="number"
            android:paddingStart="25dp"
            android:paddingEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_blue_circle_edge"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>