<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".home.Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gold_rate_updates"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        android:background="@color/white"
        app:cardElevation="24dp"
        app:cardMaxElevation="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_profile_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtVwName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                tools:text="Ajith S"
                android:textColor="@color/blue"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        android:background="@color/white"
        app:cardElevation="24dp"
        app:cardMaxElevation="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:background="@color/white"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/bg_circle_gray"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_ring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ltv_updates"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_right_arrow" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="8dp"
        app:cardElevation="24dp"
        app:cardMaxElevation="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>